# aegis

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: draft-artifacts.yml  draft-github-release.yml  validate.yml
config/: release-truth.json
docs/: ACCEPTANCE_CRITERIA.md  ADR.md  API_SPEC.md  ARCHITECTURAL_PRINCIPLES.md  ARCHITECTURE.md  AUDIT_LOGGING.md  CODE_AUDIT.md  CODING_STYLE.md  COMPATIBILITY.md  DOCUMENTATION.md  FIRST_DOWNLOADABLE_ARTIFACTS.md  INVARIANTS.md  OPERATING_DOCTRINE.md  ORCHESTRATOR_FSM_CONTRACT.md  PHASE5_PLANNING_REVIEW.md  PHASEMAP.md  PHASE_COMPLETION_AUDIT.md  PHASE_REVIEW.md  POLICY_DISTRIBUTION.md  POLICY_ENGINE.md  PRD.md  RELEASE_CHECKLIST_v0.4.0.md  RELEASE_DISTRIBUTION_PLAN.md  RELEASE_PATH.md  RELEASE_PROCESS.md  RELEASE_REVIEW_v0.4.0.md  ROADMAP.md  RUNTIME_EVIDENCE.md  SECURITY_MODEL.md  TASKS.md  TEST_STRATEGY.md  THREAT_MODEL.md  TRUST_BOUNDARIES.md  UI-DESIGN.md  UI_EVIDENCE_CONTRACT.md  USER_FLOWS.md  VALIDATION.md
schemas/: ApprovalRequest.schema.json  AuditRecord.schema.json  ExecutionState.schema.json  PolicyBundleManifest.schema.json  ToolCallRequest.schema.json  ToolCallResponse.schema.json
scripts/: regenerate-local-policy-signature.sh  validate-v0.4.0-release.sh  verify.py
src/: error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/ui/: main.slint  sample_evidence.json
tests/: audit_contract.rs  audit_persistence.rs  credential_boundary.rs  credential_injection.rs  draft_artifact_workflow.rs  draft_github_release_workflow.rs  error_reporting.rs  execution_authorization.rs  execution_lifecycle.rs  execution_recovery_inspection.rs  execution_recovery_plan.rs  execution_state_log.rs  gateway_approval_contract.rs  gateway_cli_help.rs  gateway_contract.rs  gateway_entrypoint.rs  gateway_execution_identity.rs  gateway_idempotency.rs  gateway_safety.rs  gateway_validation.rs  gateway_wrapper_contract.rs  health_check_wrapper.rs  local_runtime.rs  policy_adapter_contract.rs  policy_bundle_contract.rs  policy_evaluation_contract.rs  release_validation_script.rs  sandbox_note_wrapper.rs  test_verify.py  ui_scaffold.rs  wrapper_dispatcher.rs
(+89 files in other folders)
