[package]
name = "aegis"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "AI Execution Governance and Interception System"

[lib]
name = "aegis"
path = "src/lib.rs"

[[bin]]
name = "aegis-gateway"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["parsing"] }
