[package]
name = "aegis-desktop"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "AEGIS desktop shell and static Slint operator surface"

[dependencies]
slint = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
slint-build = "1"
tauri-build = { version = "2", features = [] }
