[package]
name = "aegis-desktop"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "AEGIS desktop shell and static Slint operator surface"

[dependencies]
aegis = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1"
tauri = { version = "2", features = [] }

[build-dependencies]
slint-build = "1"
tauri-build = { version = "2", features = [] }
